--- a/src/app/sharedcomponents/invoice/invoice.component.html
+++ b/src/app/sharedcomponents/invoice/invoice.component.html
@@ -1,3 +1,4 @@
+<app-menu />
 <div class="card wrapper">
   <form [formGroup]="formGroup">
     <p-card class="card">
@@ -42,7 +43,7 @@
         </div>
       </div>
 
-      <div class="row">                                    
+      <div class="row">
         <div class="field">
           <label>Invoice Date</label>
           <input
